[XForms] Show error on invalid qname for lazy created node. Bug 317527, r=me+doronr, patch by aaronr